--- a/.bundlewatch.config.json
+++ b/.bundlewatch.config.json
@@ -33,6 +33,18 @@
       "maxSize": "250kB"
     },
     {
+      "path": "build/public/static/js/plotly*.js",
+      "maxSize": "2.2MB"
+    },
+    {
+      "path": "build/public/static/js/Plotly*.js",
+      "maxSize": "2.2MB"
+    },
+    {
+      "path": "build/public/static/js/jsoneditor*.js",
+      "maxSize": "2.2MB"
+    },
+    {
       "path": "build/public/static/js/client*.js",
       "maxSize": "2.2MB"
     }
