--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
     "@eeacms/volto-embed": "10.1.4",
     "@eeacms/volto-globalsearch": "2.1.2",
     "@eeacms/volto-matomo": "6.0.1",
+    "@eeacms/volto-nextcloud-video-block": "2.0.1",
     "@eeacms/volto-plotlycharts": "13.3.7",
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@plone/volto": "17.22.1",
