--- a/package.json
+++ b/package.json
@@ -180,11 +180,11 @@
     "@eeacms/volto-searchlib": "2.1.10",
     "@eeacms/volto-datablocks": "7.3.3",
     "@eeacms/volto-group-block": "8.1.0",
-    "@eeacms/volto-chatbot": "0.6.1"
+    "@eeacms/volto-chatbot": "^0.6.1"
   },
   "dependencies": {
     "@eeacms/volto-cca-policy": "0.3.92",
-    "@eeacms/volto-chatbot": "0.6.1",
+    "@eeacms/volto-chatbot": "^0.6.1",
     "@eeacms/volto-datablocks": "7.3.3",
     "@eeacms/volto-eea-design-system": "1.40.1",
     "@eeacms/volto-eea-kitkat": "30.1.0",
