--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "@elastic/search-ui": "1.21.2",
     "@eeacms/volto-searchlib": "^2.1.10",
+    "@eeacms/volto-globalsearch": "^2.1.2",
     "@eeacms/volto-datablocks": "7.3.4",
     "@eeacms/volto-group-block": "8.1.1",
     "@eeacms/volto-eea-design-system": "1.40.2",
@@ -191,7 +192,7 @@
     "@eeacms/volto-eea-kitkat": "30.1.1",
     "@eeacms/volto-eea-website-theme": "3.18.1",
     "@eeacms/volto-embed": "10.1.4",
-    "@eeacms/volto-globalsearch": "3.0.0",
+    "@eeacms/volto-globalsearch": "^2.1.2",
     "@eeacms/volto-matomo": "6.0.1",
     "@eeacms/volto-nextcloud-video-block": "2.0.1",
     "@eeacms/volto-plotlycharts": "13.3.7",
