--- a/package.json
+++ b/package.json
@@ -180,11 +180,13 @@
     "@eeacms/volto-searchlib": "^2.1.10",
     "@eeacms/volto-globalsearch": "^2.1.2",
     "@eeacms/volto-datablocks": "7.3.4",
+    "@eeacms/volto-call-to-action-block": "5.2.0",
     "@eeacms/volto-group-block": "8.1.1",
     "@eeacms/volto-eea-design-system": "1.40.2",
     "@eeacms/volto-chatbot": "^0.6.1"
   },
   "dependencies": {
+    "@eeacms/volto-call-to-action-block": "5.2.0",
     "@eeacms/volto-cca-policy": "0.3.101",
     "@eeacms/volto-chatbot": "^0.6.1",
     "@eeacms/volto-datablocks": "7.3.4",
